Fixes broken layout for jobs import tables (#186)

--- a/app/assets/stylesheets/jobs.scss
+++ b/app/assets/stylesheets/jobs.scss
@@ -2,15 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-#jobs-index {
-  td, th { padding: 5px; }
-}
-
-table.job {
+.table--job {
   width: 100%;
-  .identifier { width: 25%; }
+  margin-bottom: 0;
+  .identifier { width: 15%; }
   .item_status { width: 10%; text-align: center; }
-  .lineno { width: 5%; }
+  .lineno { width: 5%; text-align: center;}
   .type { width: 5%;}
   .visibility { width: 8%; }
   .collection_count { width: 3%; }
@@ -21,7 +18,7 @@ table.job {
   .filename { width:13%; }
 }
 .file-name {
-  padding-left: 1.5rem;
+
   font-style: italic;
 }
 
